# MBSN

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TestModel.MyModel.xml  error.txt  installer.sh  main.cpp  main.py  mathML_to_string.py  modelica_to_xml.py  multirun.py  out.json  run.py  singlerun.py  test.json  xmlParser.py  xmlscript.py  xmlscriptMathML.py  xmlscriptMathML_test.py
TestModel/: Functions.mo  MyClass.mo  MyModel.mo  package.mo
cpp/: json_reader.cpp  json_reader.h  main.cpp  mathML_to_string.cpp  mathML_to_string.h  parser.cpp  parser.h
cpp/Model/: BaseType.cpp  BuiltInOp.cpp  InitAss.cpp  Module.cpp  Operation.cpp  OperationArg.cpp  Parameter.cpp
cpp/Statements/: ForStatem.cpp  IfStatement.cpp  StatementOwner.cpp  WhileStatement.cpp
headers/: parser.h
headers/Model/: Arg.h  BuiltInOp.h  ExprVar.h  Expression.h  InitAss.h  Module.h  Operation.h  Species.h  Type.h  Variable.h
headers/Statements/: ForStatement.h  Return.h  StNest.h  WhileStatement.h
libraries/mclab-data-model_modified_by_MBSN/__MACOSX/: ._data_model
libraries/mclab-data-model_modified_by_MBSN/data_model/docs/design/: corrispondenzaTipi.txt  (+1 more)
libraries/mclab-data-model_modified_by_MBSN/data_model/test/: clean_csv.py  generate_modelica.py  plot_all_errors.py
libraries/mclab/__MACOSX/data_model/: ._implementation
libraries/mclab/data_model/test/: clean_all_csv.py  compute_error.py  eliminate_all_except_phml.py  generate_csv_from_modelica.py  generate_csv_from_phml.py  plot_variables.py  readme.txt
libraries/rapidxml-1.13/: rapidxml_print.hpp
python/: modelica_to_json.py  modelica_to_xml.py  xmlscriptMathML.py  xmlscriptMathML_test.py
tests/: test.py
(+215 files in other folders)
